<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NextGIS Logger</string>
    <string name="app_settings">Settings</string>
    <string name="app_about">About</string>
    <string name="title_activity_sessions">Sessions</string>

    <string name="about_info">This app collects cell and sensors (orientation, accelerometer, gyroscope, etc) data continiously and at specified points (markers).</string>
    <string name="about_more">See more:</string>
    <string name="about_more_url">http://github.com/nextgis/nextgislogger</string>
    <string name="about_authors">Authors:</string>
    <string name="about_authors_names">Nikita Kirin, Stanislav Petriakov</string>
    <string name="about_nextgis_url">http://nextgis.com/</string>
    <string name="about_license">License:</string>
    <string name="about_license_info"><a href="http://www.gnu.org/licenses/">GPL v2</a></string>

    <string name="settings_sensors">Sensors</string>
    <string name="settings_main">Main</string>

    <string name="settings_period">Set Period (sec)</string>
    <string name="settings_period_sum">"Current is "</string>
    <string name="settings_period_toast">Min is 1, max is 3600</string>
    <string name="settings_cells_api17">Try use API 17+ to find nearby cells</string>
    <string name="settings_cells_api17_sum">Available on Android 4.2+\r\nCould help for some devices if cells data doesn\'t collect</string>
    <string name="settings_cats">Use categories file</string>
    <string name="settings_cats_sum">Mark name presets for text field</string>
    <string name="settings_cat_path">Load mark name presets from file…</string>
    <string name="settings_user_name">Identification string (optional)</string>
    <string name="settings_keep_screen">Keep screen on</string>
    <string name="settings_keep_screen_sum">Screen does not turn off automatically at Markers screen</string>

    <string name="settings_sensor_mode">Use linear accelerometer</string>
    <string name="settings_sensor_mode_sum">Without gravity of Earth (in all dims)</string>
    <string name="settings_sensor_state">Enable accelerometer data</string>
    <string name="settings_sensor_gyroscope_state">Enable gyroscope data</string>
    <string name="settings_sensor_magnetic_state">Enable magnetometer data</string>
    <string name="settings_sensor_orientation_state">Enable orientation data</string>
    <string name="settings_sensor_sum">Available if device has sensor</string>

    <string name="service_notif_title">NextGIS Logger</string>
    <string name="service_notif_text">Logger is running…</string>
    <string name="btn_service_start">Start Logger</string>
    <string name="btn_service_stop">Stop Logger</string>
    <string name="logger_started">Logger started:</string>
    <string name="logger_finished">Logger finished:</string>
    <string name="records_collected">Records collected:</string>
    <string name="marks_collected">Marks collected:</string>
    <string name="service_running">running</string>
    <string name="service_stopped">stopped</string>
    <string name="network_type">Network type:</string>
    <string name="btn_save_mark">Markers</string>
    <string name="tv_modes">MODES</string>

    <string name="session_name">Session name:</string>
    <string name="session_incorrect_name">"Incorrect char "</string>
    <string name="session_null_name">Name can not be blank</string>
    <string name="btn_session_open">Open</string>
    <string name="btn_session_close">Close</string>
    <string name="btn_sessions_manage">Manage</string>

    <string name="scl_current_session">current session</string>
    <string name="delete_sessions_done">Sessions deleted</string>
    <string name="delete_sessions_title">Delete sessions…</string>
    <string name="share_sessions_title">Share sessions…</string>
    <string name="sessions_nothing_selected">Nothing is selected</string>

    <string name="ext_media_unmounted_msg">External Media is NOT MOUNTED</string>
    <string name="fs_error_msg">File system ERROR.</string>

    <string name="sensor_error">"No sensors found: "</string>
    <string name="sensor_accelerometer">accelerometer</string>
    <string name="sensor_linear">linear accelerometer</string>
    <string name="sensor_gyroscope">gyroscope</string>
    <string name="sensor_magnetic">magnetometer</string>
    <string name="sensor_orientation">orientation</string>

    <string name="cat_file_structure_error">Wrong categories file structure</string>
    <string name="cat_file_error">No categories, please reload presets</string>
    <string name="error_no_file">No file selected</string>
    <string name="file_loaded">"Loaded from "</string>

    <string name="menu_search">Markers</string>
    <string name="mark_editor_hint">Enter Name of Mark</string>
    <string name="mark_saved">Mark saved</string>

    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
</resources>
